[gd_scene load_steps=5 format=3 uid="uid://dxfls7k2y4c7m"]

[ext_resource type="Script" path="res://menu.gd" id="1_1qxpp"]
[ext_resource type="FontFile" uid="uid://bsyx2ninnmyd7" path="res://Cleanow.ttf" id="2_onhg7"]
[ext_resource type="FontFile" uid="uid://bxj2plaxwwa6a" path="res://Bitshow.ttf" id="2_ya48i"]
[ext_resource type="Texture2D" uid="uid://blmhsm7hjgtbh" path="res://DYO566arRbKig4viHO9CYw.webp" id="4_i6vhs"]

[node name="Menu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1qxpp")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.594808, 0.348822, 0.0569054, 1)
theme_override_colors/font_shadow_color = Color(0.907942, 0.907942, 0.907942, 1)
theme_override_constants/line_spacing = -3
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_ya48i")
theme_override_font_sizes/font_size = 18
text = "The Adventures
  of Dirty Doug
"

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 10
layout_mode = 2
theme_override_fonts/font = ExtResource("2_onhg7")
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Lvl1B" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_onhg7")
text = "Level 1"

[node name="Lvl2B" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_onhg7")
text = "Level 2"

[node name="Lvl3B" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_onhg7")
text = "Level 3"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme_override_fonts/font = ExtResource("2_onhg7")
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_i6vhs")
expand_mode = 4

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Lvl1B" to="." method="_on_lvl_1b_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Lvl2B" to="." method="_on_lvl_2b_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Lvl3B" to="." method="_on_lvl_3b_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
